--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1805,6 +1805,10 @@ div.rta__autocomplete.str-chat__emojisearch {
   }
 }
 
+.str-chat__channel-list {
+  background: var(--primary-color);
+}
+
 @media screen and (max-width: 650px) {
   .channerl-list__container-toggle {
     right: -3%;
